--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 :root {
     --logo-font: FibelNordRegular;
+    --sample-color: #52362a;
 }
 
 body {
@@ -60,7 +61,7 @@ body {
     font-weight: bold;
     font-size: 20px;
     width: 60%;
-    margin: 120px 0 0 40px;
+    margin: 60px 0 0 40px;
 }
 
 .right-side .header p {
@@ -74,6 +75,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 30px;
+    box-shadow: 0 3px 5px 0 rgba(0,0,0,0.6);
 }
 
 form {
@@ -119,5 +121,24 @@ form input:focus{
 }
 
 .right-side .submit-section {
-    
+    margin: 40px 0 0 40px;
+}
+
+.right-side .submit-section button {
+    margin-bottom: 20px;
+    font-size: 18px;
+    padding: 10px 30px;
+    border-radius: 5px;
+    background-color: var(--sample-color);
+    color: white;
+}
+
+.right-side .submit-section button:hover {
+    background-color: #36241c;
+}
+
+.right-side .submit-section a {
+    text-decoration: none;
+    color: var(--sample-color);
+    font-weight: bold;
 }
